# shell-tip

./: Cargo.toml  README.md
scripts/: install.sh
src/: main.rs
