[package]
name = "shell-tip"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = "1.0.152"
serde_json = "1.0.93"
tokio = { version = "1", features = ["full"] }
clap = { version = "4.1.8", features = ["derive"] }
async-openai = "0.8.0"
colored = "2.0.0"
spinners = "4.1.0"
